fixed the image stretching issue

--- a/assets/main.css
+++ b/assets/main.css
@@ -9,18 +9,18 @@ h1 {
     text-decoration: underline;
     text-decoration-color: #CDDC39;
     font-size: 5em;
-    
 }
 
 h3 {
     text-decoration: underline;
 }
+
 img {
     width: 80%;
     /* mix-blend-mode: multiply;s */
     display:block;
     margin:auto;
-    height: 22em;
+    max-height: 350px;
 }
 
 footer {
@@ -43,6 +43,7 @@ footer {
     position: relative;
     border-radius: 4%;
     min-width: 250px;
+    border: 1px solid #CDDC39;
 }
 
 .availability {
@@ -81,6 +82,7 @@ footer {
     background-color: #CDDC39;
     width: 80%;
     justify-content: center;
+    align-content: flex-start;
     display: block;
     margin: auto;
     border-radius: 25%;
@@ -102,16 +104,12 @@ footer {
     width:100%;
 }
 
-#soldOut {
-    flex-shrink: 0;
-}
-
 
 /*//////////////  MEDIA QUERIES  //////////*/
 
-@media (min-width: 670px) {
+@media (min-width: 630px) {
     .card {
-      flex: 1 40%;
+      flex: 1 35%;
       margin: 5%;
     }
   }
